--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "CA Gov Portal - Template v5",
   "author": "SymSoft Solutions, Mark Aplet",
   "devDependencies": {
+    "browsersync-ssi": "^0.2.4",
     "grunt": "~0.4.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-less": "~1.1.0",
-    "grunt-contrib-uglify": "~0.10.1",
-    "grunt-contrib-concat": "~0.5.1",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-browser-sync": "^2.1.3",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-less": "~1.1.0",
+    "grunt-contrib-uglify": "~0.10.1",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-html": "^5.0.1"
   },
   "dependencies": {
