--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-"devDependencies": {
-  "gulp": "latest",
-  "gulp-util": "latest",
-  "gulp-sass": "latest",
-  "gulp-coffee": "latest",
-  "gulp-uglify": "latest",
-  "gulp-concat": "latest",
-  "gulp-connect": "latest",
-      "gulp-autoprefixer": "^3.1.1"
+  "devDependencies": {
+    "grunt": "^1.0.3",
+    "gulp": "latest",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-coffee": "latest",
+    "gulp-concat": "latest",
+    "gulp-connect": "latest",
+    "gulp-sass": "latest",
+    "gulp-uglify": "latest",
+    "gulp-util": "latest"
   }
 }
