- Updated tempate structure image. - Updated cagov.core.js with bootstrap utils.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "devDependencies": {
     "grunt": "^1.0.3",
-    "gulp": "latest",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-coffee": "latest",
-    "gulp-concat": "latest",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "latest",
-    "gulp-sass": "latest",
-    "gulp-uglify": "latest",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "latest"
   }
 }
