--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
+  "name": "cagov-template-v5.5",
+  "version": "5.5.0",
+  "description": "CA State Template v5.5",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-coffee": "latest",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "latest",
+    "gulp-header": "^2.0.5",
     "gulp-install": "^1.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "latest"
+  },
+  "dependencies": {
+    "gulp-inject-version": "^1.0.1"
   }
 }
