Updated gulpfile.js Added “dev” (not-minified compilation) and “prod” (minified compilation), included all color scheme compilation commands.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "gulp-coffee": "latest",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "latest",
+    "gulp-csso": "^2.0.0",
     "gulp-header": "^2.0.5",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-install": "^1.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "latest"
+    "gulp-util": "latest",
+    "run-sequence": "^1.2.2"
   },
   "dependencies": {
     "gulp-inject-version": "^1.0.1"
