--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "gulp-header": "^2.0.7",
     "gulp-install": "^1.1.0",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "latest"
+    "gulp-uglify": "^3.0.2",
+    "gulp-util": "latest",
+    "terser-webpack-plugin": "^2.3.1"
   },
   "dependencies": {
     "gulp-inject-version": "^1.0.1"
