--- a/web.config
+++ b/web.config
@@ -4,6 +4,12 @@
         <handlers>
             <remove name="SSINC-html" />
             <add name="ASPClassic-html" path="*.html" verb="GET, POST" modules="IsapiModule" scriptProcessor="%windir%\system32\inetsrv\asp.dll" resourceType="File" preCondition="bitness64" />
+            <add name="SSINC-html" 
+                 path="*.html" 
+                 verb="*" 
+                 modules="ServerSideIncludeModule" 
+                 resourceType="File" 
+                 requireAccess="Script" />
         </handlers>
       <staticContent>
         <remove fileExtension=".woff" />
