updated bootstrap to v5.0.2, fixed gulp js uglify functions

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-install": "^1.1.0",
     "gulp-sass": "^4.1.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^3.0.0",
     "gulp-util": "latest",
     "run-sequence": "^1.2.2"
   },
