--- a/web.config
+++ b/web.config
@@ -12,9 +12,12 @@
                  requireAccess="Script" />
         </handlers>
       <staticContent>
-        <remove fileExtension=".woff" />
+      	<remove fileExtension=".woff" />
         <!-- in case the mime type already exist in IIS -->
         <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+        <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+        <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+        <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
       </staticContent>
     </system.webServer>
 </configuration>
