added step list component

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -65,6 +65,10 @@
    "url": "/sample/socialsharer.html"
   },
   {
+    "text": "Step List",
+    "url": "/sample/step-list.html"
+   },
+   {
    "text": "Tabs",
    "url": "/sample/tabs.html"
   },
