Updated feature card image. Updated alert banner content #312

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -23,8 +23,22 @@
    ]
   },
   {
-   "text": "Alert Banner",
-   "url": "/sample/alert-banner.html"
+   "text": "Alert banner",
+   "url": "/sample/alert-banner.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Banner",
@@ -61,19 +75,19 @@
    "url": "/sample/countdown.html"
   },
   {
-   "text": "Featured Narrative",
+   "text": "Featured narrative",
    "url": "/sample/featured-narrative.html"
   },
   {
-   "text": "Featured Search",
+   "text": "Featured search",
    "url": "/sample/featured-search.html"
   },
   {
-   "text": "Form Styles",
+   "text": "Form styles",
    "url": "/sample/form.html"
   },
   {
-   "text": "Horizontal Rules",
+   "text": "Horizontal rules",
    "url": "/sample/horizontal-rules.html"
   },
   {
@@ -85,7 +99,7 @@
    "url": "/sample/modal.html"
   },
   {
-   "text": "Number Counter",
+   "text": "Number counter",
    "url": "/sample/number-counter.html"
   },
   {
@@ -93,11 +107,11 @@
    "url": "/sample/parallax.html"
   },
   {
-   "text": "Progress Bars",
+   "text": "Progress bars",
    "url": "/sample/progress-bars.html"
   },
   {
-   "text": "Progress Blocks",
+   "text": "Progress blocks",
    "url": "/sample/progress-blocks.html"
   },
   {
@@ -105,7 +119,7 @@
    "url": "/sample/socialsharer.html"
   },
   {
-   "text": "Step List",
+   "text": "Step list",
    "url": "/sample/step-list.html"
   },
   {
