updated countdown component #326

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -90,7 +90,25 @@
   },
   {
    "text": "Countdown",
-   "url": "/sample/countdown.html"
+   "url": "/sample/countdown.html",
+   "subnav": [
+    {
+     "text": "Countdown default",
+     "url": "#Countdown-default"
+    },
+    {
+     "text": "Countdown primary",
+     "url": "#Countdown-primary"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Featured narrative",
