Updated blockquote page #325

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -46,7 +46,29 @@
   },
   {
    "text": "Blockquote",
-   "url": "/sample/blockquotes.html"
+   "url": "/sample/blockquotes.html",
+   "subnav": [
+    {
+     "text": "Basic blockquote",
+     "url": "#Basic-blockquote"
+    },
+    {
+     "text": "Pull quote",
+     "url": "#Pull-quote"
+    },
+    {
+     "text": "Prominent blockquote",
+     "url": "#Prominent-blockquote"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Breadcrumb",
