updated countdown page

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -111,7 +111,7 @@
    ]
   },
   {
-   "text": "Countdown",
+   "text": "Countdown timer",
    "url": "/sample/countdown.html",
    "subnav": [
     {
