updated hero banner page #332

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -41,8 +41,26 @@
    ]
   },
   {
-   "text": "Banner",
-   "url": "/sample/large-header-banner.html"
+   "text": "Hero banner",
+   "url": "/sample/large-header-banner.html",
+   "subnav": [
+    {
+     "text": "Hero banner",
+     "url": "#Hero-banner"
+    },
+    {
+     "text": "Hero info",
+     "url": "#Hero-info"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Blockquote",
