updated components landing page #299

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -41,28 +41,6 @@
    ]
   },
   {
-   "text": "Hero banner",
-   "url": "/components/large-header-banner.html",
-   "subnav": [
-    {
-     "text": "Hero banner",
-     "url": "#Hero-banner"
-    },
-    {
-     "text": "Hero info",
-     "url": "#Hero-info"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
-  },
-  {
    "text": "Blockquote",
    "url": "/components/blockquotes.html",
    "subnav": [
@@ -107,7 +85,7 @@
    ]
   },
   {
-   "text": "Buttons",
+   "text": "Button",
    "url": "/components/buttons.html"
   },
   {
@@ -151,20 +129,12 @@
    ]
   },
   {
-   "text": "Featured narrative",
-   "url": "/components/featured-narrative.html"
+   "text": "Form elements",
+   "url": "/components/form-elements.html"
   },
   {
-   "text": "Featured search",
-   "url": "/components/featured-search.html"
-  },
-  {
-   "text": "Form styles",
-   "url": "/components/form.html"
-  },
-  {
-   "text": "Horizontal rules",
-   "url": "/components/horizontal-rules.html"
+   "text": "Horizontal separator",
+   "url": "/components/horizontal-separator.html"
   },
   {
    "text": "Lists",
@@ -175,40 +145,32 @@
    "url": "/components/modal.html"
   },
   {
-   "text": "Number counter",
-   "url": "/components/number-counter.html"
-  },
-  {
    "text": "Parallax",
    "url": "/components/parallax.html"
   },
   {
-   "text": "Progress bars",
-   "url": "/components/progress-bars.html"
+   "text": "Progress tracker",
+   "url": "/components/progress-tracker.html"
   },
   {
-   "text": "Progress blocks",
-   "url": "/components/progress-blocks.html"
+   "text": "Rolling number counter",
+   "url": "/components/rolling-number-counter.html"
   },
   {
-   "text": "SocialSharer",
-   "url": "/components/socialsharer.html"
+   "text": "Search bar",
+   "url": "/components/search-bar.html"
   },
   {
-   "text": "Step list",
-   "url": "/components/step-list.html"
+   "text": "Social media icons",
+   "url": "/components/social-media-icons.html"
+  },
+  {
+   "text": "Table",
+   "url": "/components/tables.html"
   },
   {
    "text": "Tabs",
    "url": "/components/tabs.html"
-  },
-  {
-   "text": "Tables",
-   "url": "/components/tables.html"
-  },
-  {
-   "text": "Timeline",
-   "url": "/components/timeline.html"
   }
  ]
 }
