updated components page #299

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -145,16 +145,16 @@
    "url": "/components/modal.html"
   },
   {
+   "text": "Number counter",
+   "url": "/components/number-counter.html"
+  },
+  {
    "text": "Parallax",
    "url": "/components/parallax.html"
   },
   {
    "text": "Progress tracker",
    "url": "/components/progress-tracker.html"
-  },
-  {
-   "text": "Rolling number counter",
-   "url": "/components/rolling-number-counter.html"
   },
   {
    "text": "Search bar",
