updated alert component content

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -23,8 +23,8 @@
    ]
   },
   {
-   "text": "Alert banner",
-   "url": "/components/alert-banner.html",
+   "text": "Alert",
+   "url": "/components/alert.html",
    "subnav": [
     {
      "text": "Sample",
