updated countdown component page #326

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -111,12 +111,8 @@
    "url": "/components/countdown.html",
    "subnav": [
     {
-     "text": "Countdown default",
-     "url": "#Countdown-default"
-    },
-    {
-     "text": "Countdown primary",
-     "url": "#Countdown-primary"
+     "text": "Sample",
+     "url": "#Sample"
     },
     {
      "text": "Usage",
