Updated list component #410

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -134,7 +134,25 @@
   },
   {
    "text": "Lists",
-   "url": "/components/lists.html"
+   "url": "/components/lists.html",
+   "subnav": [
+    {
+     "text": "Unordered list",
+     "url": "#Unordered-list"
+    },
+    {
+     "text": "Ordered list",
+     "url": "#Ordered-list"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Modal",
