updated modal component #417

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -176,7 +176,21 @@
   },
   {
    "text": "Social media icons",
-   "url": "/components/social-media-icons.html"
+   "url": "/components/social-media-icons.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Table",
