updated modal side nav #417

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -156,7 +156,21 @@
   },
   {
    "text": "Modal",
-   "url": "/components/modal.html"
+   "url": "/components/modal.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Number counter",
