updated parallax component #460

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -178,7 +178,21 @@
   },
   {
    "text": "Parallax",
-   "url": "/components/parallax.html"
+   "url": "/components/parallax.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Progress tracker",
