updated number counter #416

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -174,7 +174,21 @@
   },
   {
    "text": "Number counter",
-   "url": "/components/number-counter.html"
+   "url": "/components/number-counter.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
   },
   {
    "text": "Parallax",
