updated countdown component

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -108,7 +108,7 @@
   },
   {
    "text": "Countdown timer",
-   "url": "/components/countdown.html",
+   "url": "/components/countdown-timer.html",
    "subnav": [
     {
      "text": "Sample",
