Move progress tracker to pattern

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -223,8 +223,22 @@
       ]
     },
     {
-      "text": "Progress tracker",
-      "url": "/components/progress-tracker.html"
+      "text": "Progress bar",
+      "url": "/components/progress-bar.html",
+      "subnav": [
+        {
+          "text": "Sample",
+          "url": "#Sample"
+        },
+        {
+          "text": "Usage",
+          "url": "#Usage"
+        },
+        {
+          "text": "Accessibility",
+          "url": "#Accessibility"
+        }
+      ]
     },
     {
       "text": "Search bar",
