--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -1,274 +1,284 @@
 {
-  "components": [
+ "components": [
+  {
+   "text": "Accordion",
+   "url": "/components/accordions.html",
+   "subnav": [
     {
-      "text": "Accordion",
-      "url": "/components/accordions.html",
-      "subnav": [
-        {
-          "text": "Basic accordion",
-          "url": "#Basic-accordion"
-        },
-        {
-          "text": "Accordion list",
-          "url": "#Accordion-list"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
+     "text": "Basic accordion",
+     "url": "#Basic-accordion"
     },
     {
-      "text": "Alert",
-      "url": "/components/alert.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
+     "text": "Accordion list",
+     "url": "#Accordion-list"
     },
     {
-      "text": "Blockquote",
-      "url": "/components/blockquotes.html",
-      "subnav": [
-        {
-          "text": "Basic blockquote",
-          "url": "#Basic-blockquote"
-        },
-        {
-          "text": "Pull quote",
-          "url": "#Pull-quote"
-        },
-        {
-          "text": "Prominent blockquote",
-          "url": "#Prominent-blockquote"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
+     "text": "Usage",
+     "url": "#Usage"
     },
     {
-      "text": "Breadcrumb",
-      "url": "/components/breadcrumb.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Button",
-      "url": "/components/buttons.html"
-    },
-    {
-      "text": "Card",
-      "url": "/components/cards.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Countdown timer",
-      "url": "/components/countdown.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Form elements",
-      "url": "/components/form-elements.html"
-    },
-    {
-      "text": "Horizontal separator",
-      "url": "/components/horizontal-separator.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Lists",
-      "url": "/components/lists.html",
-      "subnav": [
-        {
-          "text": "Unordered list",
-          "url": "#Unordered-list"
-        },
-        {
-          "text": "Ordered list",
-          "url": "#Ordered-list"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Modal",
-      "url": "/components/modal.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Number counter",
-      "url": "/components/number-counter.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Parallax",
-      "url": "/components/parallax.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Progress bar",
-      "url": "/components/progress-bar.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Search bar",
-      "url": "/components/search-bar.html"
-    },
-    {
-      "text": "Social media icons",
-      "url": "/components/social-media-icons.html",
-      "subnav": [
-        {
-          "text": "Sample",
-          "url": "#Sample"
-        },
-        {
-          "text": "Usage",
-          "url": "#Usage"
-        },
-        {
-          "text": "Accessibility",
-          "url": "#Accessibility"
-        }
-      ]
-    },
-    {
-      "text": "Table",
-      "url": "/components/tables.html"
-    },
-    {
-      "text": "Tabs",
-      "url": "/components/tabs.html"
+     "text": "Accessibility",
+     "url": "#Accessibility"
     }
-  ]
+   ]
+  },
+  {
+   "text": "Alert",
+   "url": "/components/alert.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Blockquote",
+   "url": "/components/blockquotes.html",
+   "subnav": [
+    {
+     "text": "Basic blockquote",
+     "url": "#Basic-blockquote"
+    },
+    {
+     "text": "Pull quote",
+     "url": "#Pull-quote"
+    },
+    {
+     "text": "Prominent blockquote",
+     "url": "#Prominent-blockquote"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Breadcrumb",
+   "url": "/components/breadcrumb.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Button",
+   "url": "/components/buttons.html"
+  },
+  {
+   "text": "Card",
+   "url": "/components/cards.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Countdown timer",
+   "url": "/components/countdown.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Form elements",
+   "url": "/components/form-elements.html"
+  },
+  {
+   "text": "Horizontal separator",
+   "url": "/components/horizontal-separator.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Lists",
+   "url": "/components/lists.html",
+   "subnav": [
+    {
+     "text": "Unordered list",
+     "url": "#Unordered-list"
+    },
+    {
+     "text": "Ordered list",
+     "url": "#Ordered-list"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Modal",
+   "url": "/components/modal.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Number counter",
+   "url": "/components/number-counter.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Parallax",
+   "url": "/components/parallax.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Progress bar",
+   "url": "/components/progress-bar.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Social media icons",
+   "url": "/components/social-media-icons.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  },
+  {
+   "text": "Table",
+   "url": "/components/tables.html"
+  },
+  {
+   "text": "Tabs",
+   "url": "/components/tabs.html",
+   "subnav": [
+    {
+     "text": "Sample",
+     "url": "#Sample"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
+    }
+   ]
+  }
+ ]
 }
