Update table component page

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -264,7 +264,29 @@
     },
     {
       "text": "Table",
-      "url": "/components/tables.html"
+      "url": "/components/tables.html",
+      "subnav": [
+        {
+          "text": "Basic",
+          "url": "#Basic"
+        },
+        {
+          "text": "Shaded",
+          "url": "#Shaded"
+        },
+        {
+          "text": "Zebra",
+          "url": "#Zebra"
+        },
+        {
+          "text": "Usage",
+          "url": "#Usage"
+        },
+        {
+          "text": "Accessibility",
+          "url": "#Accessibility"
+        }
+      ]
     },
     {
       "text": "Tabs",
