--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -125,12 +125,12 @@
    "url": "/components/form-elements.html",
    "subnav": [
     {
-     "text": "Text field",
-     "url": "#Text-field"
+     "text": "Label",
+     "url": "#Label"
     },
     {
-     "text": "Text area",
-     "url": "#Text-area"
+     "text": "Text field or text area",
+     "url": "#Text-field-or-text-area"
     },
     {
      "text": "Checkbox",
@@ -147,6 +147,14 @@
     {
      "text": "File input",
      "url": "#File-input"
+    },
+    {
+     "text": "Usage",
+     "url": "#Usage"
+    },
+    {
+     "text": "Accessibility",
+     "url": "#Accessibility"
     }
    ]
   },
