updated table component #697

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -290,7 +290,7 @@
   },
   {
    "text": "Table",
-   "url": "/components/tables.html",
+   "url": "/components/table.html",
    "subnav": [
     {
      "text": "Basic",
