--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -49,6 +49,10 @@
      "url": "#Basic-blockquote"
     },
     {
+     "text": "Blockquote with image",
+     "url": "#Blockquote-with-image"
+    },
+    {
      "text": "Pull quote",
      "url": "#Pull-quote"
     },
