--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -42,7 +42,7 @@
   },
   {
    "text": "Blockquote",
-   "url": "/components/blockquotes.html",
+   "url": "/components/blockquote.html",
    "subnav": [
     {
      "text": "Basic blockquote",
