--- a/build-main.yml
+++ b/build-main.yml
@@ -14,11 +14,11 @@ variables:
   minor: 0
 
 ##veracode connection Name
-  veracode: 'veracode'
+  veracode: 'Veracode'
   veracodeAppProfile: 'CDT.beta.template.webtools.website'
 
 ##sonarqube connection name and project name
-  SonarQubeConnection: 'SonarQube'
+  SonarQubeConnection: 'sonar'
   SonarQubeProjectName: 'CDT.beta.template.webtools.website'
 
 name: $(major).$(minor)$(Rev:.r)
