--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ git rm -r --cached node_modules
 git commit -m 'Remove the now ignored directory node_modules'
 git push origin master
 /node_modules
+/_site
 /.vs
 *.dat
 /StateTemplate.sln
