Fixed accordion page URL

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -2,7 +2,7 @@
  "components": [
   {
    "text": "Accordion",
-   "url": "/components/accordions.html",
+   "url": "/components/accordion.html",
    "subnav": [
     {
      "text": "Basic accordion",
