--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -90,7 +90,7 @@
   },
   {
    "text": "Button",
-   "url": "/components/buttons.html",
+   "url": "/components/button.html",
    "subnav": [
     {
      "text": "Sample",
