--- a/build-staging.yml
+++ b/build-staging.yml
@@ -7,57 +7,30 @@ trigger:
 - dev
 
 pool:
-  vmImage: 'ubuntu-latest'
-
+  name: Azure Pipelines
 steps:
-
-- task: NodeTool@0
-  inputs:
-    versionSpec: '18.x'
-  displayName: 'Install Node.js'
-
-- task: Npm@1
-  inputs:
-    command: 'install'
-  displayName: "npm install"
-
-# - script: npm run test
-#   displayName: "npm test"
-#   env:
-#     CI: true
-
-# - task: PublishCodeCoverageResults@1
-#   inputs:
-#     codeCoverageTool: 'Cobertura'
-#     summaryFileLocation: 'coverage/cobertura-coverage.xml'
-#     reportDirectory: 'coverage'
-#   displayName: 'Publish Code Coverage'
-    
-- script: npm run build
-  displayName: "npm build"
-
-- task: CopyFiles@2
-  inputs:
-    Contents: '_site/**' # Pull the build directory
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
-  inputs: 
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/_site' # build files
-    ArtifactName: 'drop' # output artifact named drop
-- task: ArchiveFiles@2
+  displayName: 'Publish Artifact: drop'
   inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: 'd:\a\1\s\'
+
+- task: ArchiveFiles@2
+  displayName: 'Archive files'
+  inputs:
+    rootFolderOrFile: 'd:\a\1\s\'
     includeRootFolder: true
     archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    archiveFile: 'd:\a\1\s\$(Build.BuildId).zip'
     replaceExistingArchive: true
+
+
 - task: Veracode@3
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
     AnalysisService: 'VeraCode'
     veracodeAppProfile: '$(system.teamProject)'
     version: '$(build.buildNumber)'
-    filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    filepath: 'd:\a\1\s\$(Build.BuildId).zip'
     createProfile: true
     maximumWaitTime: '360'
 
