--- a/build-staging.yml
+++ b/build-staging.yml
@@ -12,15 +12,15 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: '$(Build.SourcesDirectory)'
 
 - task: ArchiveFiles@2
   displayName: 'Archive files'
   inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    rootFolderOrFile: '$(Build.SourcesDirectory)'
     includeRootFolder: true
     archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    archiveFile: '$(Build.SourcesDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
 
 
@@ -30,7 +30,7 @@ steps:
     AnalysisService: 'VeraCode'
     veracodeAppProfile: '$(system.teamProject)'
     version: '$(build.buildNumber)'
-    filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    filepath: '$(Build.SourcesDirectory)/$(Build.BuildId).zip'
     createProfile: true
     maximumWaitTime: '360'
 
@@ -42,7 +42,7 @@ steps:
   #  configMode: 'manual'
    # cliProjectKey: 'beta.template.webtools.website'
     #cliProjectName: 'beta.template.webtools.website'
-   # cliSources: '$(build.artifactstagingdirectory)'
+   # cliSources: '$(Build.SourcesDirectory)'
 #- task: SonarQubeAnalyze@5
     
 #- task: SonarQubePublish@5
