Update build-staging.yml for Azure Pipelines

--- a/build-staging.yml
+++ b/build-staging.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- beta-dev
+- dev
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -51,27 +51,27 @@ steps:
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
-- task: Veracode@3
-  inputs:
-    ConnectionDetailsSelection: 'Endpoint'
-    AnalysisService: 'veracode'
-    veracodeAppProfile: '$(system.teamProject)'
-    version: '$(build.buildNumber)'
-    filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    createProfile: true
-    maximumWaitTime: '360'
+# - task: Veracode@3
+#   inputs:
+#     ConnectionDetailsSelection: 'Endpoint'
+#     AnalysisService: 'veracode'
+#     veracodeAppProfile: '$(system.teamProject)'
+#     version: '$(build.buildNumber)'
+#     filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+#     createProfile: true
+#     maximumWaitTime: '360'
 
 
-- task: SonarQubePrepare@5
-  inputs:
-    SonarQube: 'sonar'
-    scannerMode: 'CLI'
-    configMode: 'manual'
-    cliProjectKey: 'beta.template.webtools.website'
-    cliProjectName: 'beta.template.webtools.website'
-    cliSources: '$(build.artifactstagingdirectory)'
-- task: SonarQubeAnalyze@5
+# - task: SonarQubePrepare@5
+#   inputs:
+#     SonarQube: 'sonar'
+#     scannerMode: 'CLI'
+#     configMode: 'manual'
+#     cliProjectKey: 'beta.template.webtools.website' 
+#     cliProjectName: 'beta.template.webtools.website'
+#     cliSources: '$(build.artifactstagingdirectory)'
+# - task: SonarQubeAnalyze@5
     
-- task: SonarQubePublish@5
-  inputs:
-    pollingTimeoutSec: '300'
+# - task: SonarQubePublish@5
+#   inputs:
+#     pollingTimeoutSec: '300'
