Update build-staging.yml for Azure Pipelines

--- a/build-staging.yml
+++ b/build-staging.yml
@@ -51,15 +51,15 @@ steps:
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
-- task: Veracode@3
-  inputs:
-    ConnectionDetailsSelection: 'Endpoint'
-    AnalysisService: 'veracode'
-    veracodeAppProfile: '$(system.teamProject)'
-    version: '$(build.buildNumber)'
-    filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    createProfile: true
-    maximumWaitTime: '360'
+# - task: Veracode@3
+#   inputs:
+#     ConnectionDetailsSelection: 'Endpoint'
+#     AnalysisService: 'veracode'
+#     veracodeAppProfile: '$(system.teamProject)'
+#     version: '$(build.buildNumber)'
+#     filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+#     createProfile: true
+#     maximumWaitTime: '360'
 
 
 - task: SonarQubePrepare@5
