--- a/build-staging.yml
+++ b/build-staging.yml
@@ -3,10 +3,7 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-trigger:
-- beta-dev
-pr:
-- beta-dev
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
