--- a/beta-dev-build-staging.yml
+++ b/beta-dev-build-staging.yml
@@ -3,8 +3,11 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-trigger: none
-pr: none
+trigger: 
+  - beta-dev
+
+pr:
+- beta-dev
 
 pool:
   vmImage: 'ubuntu-latest'
