--- a/beta-dev-build-staging.yml
+++ b/beta-dev-build-staging.yml
@@ -54,15 +54,16 @@ steps:
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
-# - task: Veracode@3
-#   inputs:
-#     ConnectionDetailsSelection: 'Endpoint'
-#     AnalysisService: 'veracode'
-#     veracodeAppProfile: '$(system.teamProject)'
-#     version: '$(build.buildNumber)'
-#     filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-#     createProfile: true
-#     maximumWaitTime: '360'
+
+- task: Veracode@3
+  inputs:
+    ConnectionDetailsSelection: 'Endpoint'
+    AnalysisService: 'Veracode'
+    veracodeAppProfile: '$(system.teamProject)'
+    version: '$(build.buildNumber)'
+    filepath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    createProfile: true
+    maximumWaitTime: '360'
 
 
 - task: SonarQubePrepare@5
