updated side navigation #223 #578

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -2,339 +2,71 @@
  "components": [
   {
    "text": "Accordion",
-   "url": "/components/accordion.html",
-   "subnav": [
-    {
-     "text": "Basic accordion",
-     "url": "#Basic-accordion"
-    },
-    {
-     "text": "Accordion list",
-     "url": "#Accordion-list"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/accordion.html"
   },
   {
    "text": "Alert",
-   "url": "/components/alert.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/alert.html"
   },
   {
    "text": "Blockquote",
-   "url": "/components/blockquote.html",
-   "subnav": [
-    {
-     "text": "Basic blockquote",
-     "url": "#Basic-blockquote"
-    },
-    {
-     "text": "Blockquote with image",
-     "url": "#Blockquote-with-image"
-    },
-    {
-     "text": "Pull quote",
-     "url": "#Pull-quote"
-    },
-    {
-     "text": "Prominent blockquote",
-     "url": "#Prominent-blockquote"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/blockquote.html"
   },
   {
    "text": "Breadcrumb",
-   "url": "/components/breadcrumb.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/breadcrumb.html"
   },
   {
    "text": "Button",
-   "url": "/components/button.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/button.html"
   },
   {
    "text": "Countdown timer",
-   "url": "/components/countdown-timer.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/countdown-timer.html"
   },
   {
    "text": "Form elements",
-   "url": "/components/form-elements.html",
-   "subnav": [
-    {
-     "text": "Label",
-     "url": "#Label"
-    },
-    {
-     "text": "Text field or text area",
-     "url": "#Text-field-or-text-area"
-    },
-    {
-     "text": "Checkbox",
-     "url": "#Checkbox"
-    },
-    {
-     "text": "Radio button",
-     "url": "#Radio-button"
-    },
-    {
-     "text": "Dropdown-menu",
-     "url": "#Dropdown-menu"
-    },
-    {
-     "text": "File input",
-     "url": "#File-input"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/form-elements.html"
   },
   {
    "text": "Horizontal separator",
-   "url": "/components/horizontal-separator.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/horizontal-separator.html"
   },
   {
    "text": "Lists",
-   "url": "/components/lists.html",
-   "subnav": [
-    {
-     "text": "Unordered list",
-     "url": "#Unordered-list"
-    },
-    {
-     "text": "Ordered list",
-     "url": "#Ordered-list"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/lists.html"
   },
   {
    "text": "Modal",
-   "url": "/components/modal.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/modal.html"
   },
   {
    "text": "Number counter",
-   "url": "/components/number-counter.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/number-counter.html"
   },
   {
    "text": "Parallax",
-   "url": "/components/parallax.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/parallax.html"
   },
   {
    "text": "Progress bar",
-   "url": "/components/progress-bar.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/progress-bar.html"
+  },
+  {
+   "text": "Side navigation",
+   "url": "/components/side-navigation.html"
   },
   {
    "text": "Social media icons",
-   "url": "/components/social-media-icons.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/social-media-icons.html"
   },
   {
    "text": "Table",
-   "url": "/components/table.html",
-   "subnav": [
-    {
-     "text": "Basic",
-     "url": "#Basic"
-    },
-    {
-     "text": "Shaded",
-     "url": "#Shaded"
-    },
-    {
-     "text": "Zebra",
-     "url": "#Zebra"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/table.html"
   },
   {
    "text": "Tabs",
-   "url": "/components/tabs.html",
-   "subnav": [
-    {
-     "text": "Sample",
-     "url": "#Sample"
-    },
-    {
-     "text": "Usage",
-     "url": "#Usage"
-    },
-    {
-     "text": "Accessibility",
-     "url": "#Accessibility"
-    }
-   ]
+   "url": "/components/tabs.html"
   }
  ]
 }
