Added automatic on this page feature #831

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -45,6 +45,10 @@
    "url": "/components/number-counter.html"
   },
   {
+   "text": "Page navigation",
+   "url": "/components/page-navigation.html"
+  },
+  {
    "text": "Parallax",
    "url": "/components/parallax.html"
   },
