--- a/beta-build-prod.yml
+++ b/beta-build-prod.yml
@@ -4,8 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-  - beta
-  
+- beta
+
+pr: none
+
 pool:
   vmImage: 'ubuntu-latest'
 
