Add pagination component

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -49,6 +49,10 @@
    "url": "/components/page-navigation.html"
   },
   {
+   "text": "Pagination",
+   "url": "/components/pagination.html"
+  },
+  {
    "text": "Parallax",
    "url": "/components/parallax.html"
   },
