--- a/web.config
+++ b/web.config
@@ -20,9 +20,9 @@
         <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
       </staticContent>
       <!-- Below block is for custom redirect for 404 error to 404.html -->
-      <httpErrors errorMode="Custom" defaultResponseMode="ExecuteURL">
-             <remove statusCode="404" subStatusCode="-1" />
-             <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
+      <httpErrors>
+        <remove statusCode="404" />
+        <error statusCode="404" path="404.html" />
       </httpErrors>
     </system.webServer>
 </configuration>
