--- a/web.config
+++ b/web.config
@@ -26,7 +26,7 @@
       </httpErrors>
       <rewrite>
         <rules>
-          <rule name="RedirectWwwToNonBeta" stopProcessing="true">
+          <rule name="RedirectBetaToNonBeta" stopProcessing="true">
             <match url="(.*)" />
             <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
               <add input="{HTTP_HOST}" pattern="^(beta\.)(.*)$" />
