simple beta redirect

--- a/web.config
+++ b/web.config
@@ -26,12 +26,10 @@
       </httpErrors>
       <rewrite>
         <rules>
-          <rule name="RedirectBetaToNonBeta" stopProcessing="true">
-            <match url="(.*)" />
-            <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-              <add input="{HTTP_HOST}" pattern="^(beta\.)(.*)$" />
-            </conditions>
-            <action type="Redirect" url="https://{C:2}{REQUEST_URI}" />
+          <rule name="Redirect to Prod" stopProcessing="true">
+            <match url=".*" />
+            <action type="Redirect" url="https://template.webstandards.ca.gov/{R:0}"
+                redirectType="Temporary" />
           </rule>
         </rules>
       </rewrite>
