switching to permanent redirect

--- a/web.config
+++ b/web.config
@@ -29,7 +29,7 @@
           <rule name="Redirect to Prod" stopProcessing="true">
             <match url=".*" />
             <action type="Redirect" url="https://template.webstandards.ca.gov/{R:0}"
-                redirectType="Temporary" />
+                redirectType="Permanent" />
           </rule>
         </rules>
       </rewrite>
