Showing 404 message for 403

--- a/web.config
+++ b/web.config
@@ -13,6 +13,8 @@
       <httpErrors>
         <remove statusCode="404" />
         <error statusCode="404" path="404.html" />
+        <remove statusCode="403" />
+        <error statusCode="403" path="404.html" />
       </httpErrors>
     </system.webServer>
 </configuration>
