added executive profile component #477

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -25,6 +25,10 @@
    "url": "/components/countdown-timer.html"
   },
   {
+   "text": "Executive profile",
+   "url": "/components/executive-profile.html"
+  },
+  {
    "text": "Form elements",
    "url": "/components/form-elements.html"
   },
