adding .DS_Store to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ $RECYCLE.BIN/
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
+.DS_Store
 
 # Directories potentially created on remote AFP share
 .AppleDB
