added src/.DS_Store to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,6 @@ $RECYCLE.BIN/
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
-.DS_Store
 
 # Directories potentially created on remote AFP share
 .AppleDB
@@ -65,3 +64,4 @@ git push origin master
 *.dat
 /StateTemplate.sln
 /website.publishproj
+src/.DS_Store
