--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,13 @@
   },
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "prettier.documentSelectors": ["**/*.njk"],
-  "formattingToggle.affects": ["editor.formatOnSave"]
+  "prettier.documentSelectors": [
+    "**/*.njk"
+  ],
+  "formattingToggle.affects": [
+    "editor.formatOnSave"
+  ],
+  "[njk]": {
+    "editor.defaultFormatter": "eseom.nunjucks-template"
+  }
 }
