linting for node

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "browser": true,
     "commonjs": false,
     "es2021": true,
-    "node": false
+    "node": true
   },
   "extends": ["eslint:recommended"],
   "parserOptions": {
