--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "eslint": "8.33.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "2.8.3",
     "rollup": "^2.52.2",
     "rollup-plugin-import-css": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.38.1",
-    "eslint": "8.33.0",
-    "prettier": "2.8.3"
+    "sass": "^1.38.1"
   },
   "dependencies": {
     "csv-parse": "^5.3.6",
