letting prettier handles the njk formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,5 @@
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
   "prettier.documentSelectors": ["**/*.njk"],
-  "formattingToggle.affects": ["editor.formatOnSave"],
-  "[njk]": {
-    "editor.defaultFormatter": "eseom.nunjucks-template"
-  }
+  "formattingToggle.affects": ["editor.formatOnSave"]
 }
