--- a/.prettierignore
+++ b/.prettierignore
@@ -4,3 +4,4 @@ src/_includes/layouts/components.njk
 src/_includes/layouts/patterns.njk
 .github/workflows/codeql-analysis.yml
 .github/codeql/codeql-config.yml
+.github/CODEOWNERS
