Updated the version number

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cagov-template-v6",
-  "version": "6.1.1",
-  "description": "CA State Web Template Beta",
+  "version": "6.1.2",
+  "description": "CA State Web Template",
   "scripts": {
     "watch:js": "rollup --config rollup.config.js --watch",
     "watch:eleventy": "npx @11ty/eleventy --serve",
